Top navigation bar improvements + changed background color.
Added animations on buttons and disabled the blue highlight when tapping a button on Android. The background color is also changed.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
     <link rel="icon" href="favicon.png" />
   </head>
   <body>
-    <div class="topnav">
-      <a href="index.html"><img src="favicon.png" class="topnavicon" /></a>
-      <a href="index.html" class="topnavtitle">Aless Website</a>
-    </div>
-    <br />
-    <div class="searchbar">
-      <script
-        async
-        src="https://cse.google.com/cse.js?cx=a556652fc109f8e56"
-      ></script>
-      <div class="gcse-search"></div>
+    <div class="topnavgrp">
+      <div class="topnav">
+        <a href="index.html"><img src="favicon.png" class="topnavicon" /></a>
+        <a href="index.html" class="topnavtitle">Aless Website</a>
+      </div>
+      <br />
+      <div class="searchbar" id="searchbar">
+        <script
+          async
+          src="https://cse.google.com/cse.js?cx=a556652fc109f8e56"
+        ></script>
+        <div class="gcse-search"></div>
+      </div>
     </div>
   </body>
 </html>
