Added about text and social media links.

--- a/index.html
+++ b/index.html
@@ -28,5 +28,44 @@
         <div class="gcse-search"></div>
       </div>
     </div>
+    <h1 style="text-align: center">Hi There, and welcome to my website !</h1>
+    <p style="text-align: center">
+      I'm a guy, who's addicted to Technology and EDM. I do random Windows
+      experiments and test malwares on my Windows Virtual Machines. I'm also a
+      Beginner-to-intermediate developer. I'm also a YouTuber, but haven't done
+      any videos a long time ago.
+    </p>
+    <div class="social">
+      <h2>Check out my social media !</h2>
+      <div class="youtube">
+        <strong>YouTube</strong>
+        <p>
+          Even through I don't make such great content, subscribe to my YouTube
+          channel below.
+        </p>
+        <script src="https://apis.google.com/js/platform.js"></script>
+
+        <div
+          class="g-ytsubscribe"
+          data-channelid="UCkmWOMZ3--qM5QVO6rx9qFQ"
+          data-layout="full"
+          data-theme="dark"
+          data-count="default"
+        ></div>
+      </div>
+      <br />
+      <strong>Telegram</strong>
+      <p>
+        This is where my blog lives ! I post tutorials, facts, bugs, memes, and
+        much more. Enjoy it !
+      </p>
+      <script
+        async
+        src="https://telegram.org/js/telegram-widget.js?14"
+        data-telegram-post="AlessBlog/2"
+        data-width="100%"
+        data-dark="1"
+      ></script>
+    </div>
   </body>
 </html>
