Add a special meta tag for Google to verify my website.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="icon" href="favicon.png" />
+    <meta
+      name="google-site-verification"
+      content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
+    />
   </head>
   <body>
     <div class="topnavgrp">
