Added Google index info and the sitemap.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
     />
+    <meta
+      name="description"
+      content="Just a website, made by Aless and hosted on GitHub."
+    />
+    <meta name="robots" content="noarchive" />
   </head>
   <body>
     <div class="topnavgrp">
