--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       any videos a long time ago.
     </p>
     <div class="social">
-      <h2>Check out my social media !</h2>
+      <h2 class="checkoutsocialmedia">Check out my social media !</h2>
       <div class="youtube">
         <strong>YouTube</strong>
         <p>
@@ -75,6 +75,18 @@
         data-width="100%"
         data-dark="1"
       ></script>
+      <br />
+      <strong>Discord</strong>
+      <p>This is my community ! Feel free to join it !</p>
+      <iframe
+        src="https://discord.com/widget?id=814923106229420042&theme=dark"
+        width="350"
+        height="500"
+        allowtransparency="true"
+        frameborder="0"
+        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+        class="discwidget"
+      ></iframe>
     </div>
   </body>
 </html>
