--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page not found.</title>
-    <link rel="icon" href="favicon.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="/favicon.png" />
+    <link rel="stylesheet" href="/styles.css" />
     <script type="text/javascript" src="app.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
@@ -13,7 +13,7 @@
     <div id="topnav"></div>
     <script>
       $(function () {
-        $("#topnav").load("Assets/topnav.html");
+        $("#topnav").load("/Assets/topnav.html");
       });
     </script>
 
