--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -9,8 +9,8 @@
   <body>
     <div class="topnavgrp">
       <div class="topnav">
-        <a href="index.html"><img src="favicon.png" class="topnavicon" /></a>
-        <a href="index.html" class="topnavtitle">Aless Website</a>
+        <a href="/index.html"><img src="/favicon.png" class="topnavicon" /></a>
+        <a href="/index.html" class="topnavtitle">Aless Website</a>
       </div>
       <br />
       <div class="searchbar" id="searchbar">
