--- a/404.html
+++ b/404.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="/styles.css" />
     <script type="text/javascript" src="app.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Y1H2Y8BXC7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Y1H2Y8BXC7");
+    </script>
   </head>
   <body>
     <div id="topnav"></div>
