Upload sitemap.xml and some other modifications.

--- a/404.html
+++ b/404.html
@@ -6,6 +6,11 @@
     <title>Page not found.</title>
     <link rel="icon" href="/favicon.png" />
     <link rel="stylesheet" href="/styles.css" />
+    <meta
+      name="description"
+      content="This is where you are when you are lost on my website."
+    />
+    <meta name="robots" content="noarchive" />
     <script type="text/javascript" src="app.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
