--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Top navigation bar</title>
+    <meta
+      name="description"
+      content="That's my website's top navigation bar hehe!"
+    />
+    <meta name="robots" content="noarchive" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -19,6 +24,7 @@
 
       gtag("config", "G-Y1H2Y8BXC7");
     </script>
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="topnavgrp">
