--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 
     <h1 style="text-align: center; font-size: 100px">404</h1>
     <p style="text-align: center">
-      Oh no, you are lost! Hopefully, we can take you back. Click the button
+      Oh no, you are lost! I can take you back if you want. Click the button
       below to go back home.
     </p>
     <br /><br />
