--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -10,24 +10,10 @@
       content="That's my website's top navigation bar hehe!"
     />
     <meta name="robots" content="noarchive" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-Y1H2Y8BXC7"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-Y1H2Y8BXC7");
-    </script>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="topnavgrp">
+    <div class="topnavgrp" style="width: 100%">
       <div class="topnav">
         <a href="/index.html"><img src="/favicon.png" class="topnavicon" /></a>
         <a href="/index.html" class="topnavtitle">Aless Website</a>
