--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
     />
-    <meta
-      name="description"
-      content="Just a website, made by Aless and hosted on GitHub."
-    />
+    <meta name="description" content="Check out the Aless Website!" />
     <meta name="robots" content="noarchive" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -54,7 +51,7 @@
     <div class="social">
       <h2 class="checkoutsocialmedia">
         Check out my social media, and of course, my GitHub (including the
-        website repo) !
+        website repo)!
       </h2>
       <div class="youtube">
         <strong>YouTube</strong>
@@ -75,8 +72,8 @@
       <br />
       <strong>Telegram</strong>
       <p>
-        This is where my blog lives ! I post tutorials, facts, bugs, memes, and
-        much more. Enjoy it !
+        This is where my blog lives! I post tutorials, facts, bugs, memes, and
+        much more. Enjoy it!
       </p>
       <script
         async
@@ -87,7 +84,7 @@
       ></script>
       <br />
       <strong>Discord</strong>
-      <p>This is my community ! Feel free to join it !</p>
+      <p>This is my community! Feel free to join it!</p>
       <iframe
         src="https://discord.com/widget?id=814923106229420042&theme=dark"
         width="350"
@@ -101,7 +98,7 @@
       <strong>GitHub</strong>
       <p>
         This is actually where I host my website on. You can follow me, and
-        check out this website's reporitory !
+        check out this website's reporitory!
       </p>
       <a href="https://github.com/AlessGoss" target="blank" class="ghpfbtn">
         My Profile</a
