Website speed improved.

--- a/404.html
+++ b/404.html
@@ -42,8 +42,8 @@
       below to go back home.
     </p>
     <br /><br />
-    <div class="notfounddiv">
-      <a href="/" class="notfoundhome">Home</a>
+    <div style="text-align: center">
+      <a href="/" class="a-button">Home</a>
     </div>
   </body>
 </html>
