--- a/index.html
+++ b/index.html
@@ -43,72 +43,45 @@
     </script>
     <h1 style="text-align: center">Hi There, and welcome to my website !</h1>
     <p style="text-align: center">
-      I'm a guy, who's addicted to Technology and EDM. I do random Windows
-      experiments and test malwares on my Windows Virtual Machines. I'm also a
-      Beginner-to-intermediate developer. I'm also a YouTuber, but haven't done
-      any videos a long time ago.
+      I'm a guy, who's addicted to Technology and EDM.
     </p>
-    <div class="social">
-      <h2 class="checkoutsocialmedia">
-        Check out my social media, and of course, my GitHub (including the
-        website repo)!
-      </h2>
-      <div class="youtube">
-        <strong>YouTube</strong>
-        <p>
-          Even through I don't make such great content, subscribe to my YouTube
-          channel below.
-        </p>
-        <script src="https://apis.google.com/js/platform.js"></script>
-
-        <div
-          class="g-ytsubscribe"
-          data-channelid="UCkmWOMZ3--qM5QVO6rx9qFQ"
-          data-layout="full"
-          data-theme="dark"
-          data-count="default"
-        ></div>
-      </div>
+    <div style="text-align: center">
+      <h1>Check out my social media!</h1>
       <br />
-      <strong>Telegram</strong>
-      <p>
-        This is where my blog lives! I post tutorials, facts, bugs, memes, and
-        much more. Enjoy it!
-      </p>
-      <script
-        async
-        src="https://telegram.org/js/telegram-widget.js?14"
-        data-telegram-post="AlessBlog/2"
-        data-width="100%"
-        data-dark="1"
-      ></script>
-      <br />
-      <strong>Discord</strong>
-      <p>This is my community! Feel free to join it!</p>
-      <iframe
-        src="https://discord.com/widget?id=814923106229420042&theme=dark"
-        width="350"
-        height="500"
-        allowtransparency="true"
-        frameborder="0"
-        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
-        class="discwidget"
-      ></iframe>
-      <br /><br />
-      <strong>GitHub</strong>
-      <p>
-        This is actually where I host my website on. You can follow me, and
-        check out this website's reporitory!
-      </p>
-      <a href="https://github.com/AlessGoss" target="blank" class="ghpfbtn">
-        My Profile</a
-      >
       <a
-        href="https://github.com/AlessGoss/alessgoss.github.io/"
-        target="blank"
-        class="ghrepobtn"
-        >This website's repository</a
+        href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
+        class="a-button"
+        target="_blank"
+        >My YouTube Channel</a
       >
+      <br /><br /><br />
+      <a
+        class="a-button"
+        href="https://discord.com/widget?id=814923106229420042&theme=dark"
+        target="_blank"
+      >
+        My Discord Server</a
+      >
+      <br /><br /><br />
+      <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
+        >My Telegram blog</a
+      >
+      <br /><br /><br />
+      <div style="background: #222; border-radius: 25px">
+        <br />My GitHub...<br /><br /><a
+          href="https://github.com/AlessGoss"
+          target="_blank"
+          class="a-button"
+          >Profile</a
+        ><br /><br /><br /><a
+          href="https://github.com./AlessGoss/alessgoss.github.io"
+          class="a-button"
+          target="_blank"
+          >Website repository</a
+        ><br /><br />
+      </div>
     </div>
+    <br /><br />
+    <footer style="text-align: center">Copyright &copy; 2021 AlessGoss</footer>
   </body>
 </html>
