--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -16,7 +16,7 @@
     <div class="topnavgrp" style="width: 100%">
       <div class="topnav">
         <a href="/index.html"><img src="/favicon.png" class="topnavicon" /></a>
-        <a href="/index.html" class="topnavtitle">Aless Website</a>
+        <a href="/index.html" class="topnavtitle a-button">Aless Website</a>
       </div>
       <br />
       <div class="searchbar" id="searchbar">
