Remove FontAwesome kit cause I didn't use it yet.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Aless Website</title>
     <link rel="stylesheet" href="./styles.css" />
     <script type="text/javascript" src="app.js"></script>
-    <script
+    <!--     <script
       src="https://kit.fontawesome.com/5e1adbb88d.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <link rel="icon" href="favicon.png" />
     <meta
       name="google-site-verification"
