Added a notice if there is no JavaScript.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
     </script>
   </head>
   <body>
+    <noscript
+      ><p style="text-align: center">
+        There is no JavaScript!<br /><br />Some parts of the website will not
+        work, such as the top navigation bar.<br /><br />If your browser doesn't
+        support JavaScript, upgrade it or choose another browser with JavaScript
+        support.<br /><br />Or, if you've disabled JavaScript, enable it!
+      </p></noscript
+    >
     <div id="topnav"></div>
     <script>
       $(function () {
