--- a/404.html
+++ b/404.html
@@ -13,20 +13,6 @@
     <meta name="robots" content="noarchive" />
     <script type="text/javascript" src="app.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-Y1H2Y8BXC7"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-Y1H2Y8BXC7");
-    </script>
   </head>
   <body>
     <div id="topnav"></div>
@@ -35,15 +21,19 @@
         $("#topnav").load("/Assets/topnav.html");
       });
     </script>
-
     <h1 style="text-align: center; font-size: 100px">404</h1>
     <p style="text-align: center">
-      Oh no, you are lost! I can take you back if you want. Click the button
-      below to go back home.
+      Oh no, you are lost! I can take you back if you want. Click one of the
+      buttons below.
     </p>
     <br /><br />
     <div style="text-align: center">
-      <a href="/" class="a-button">Home</a>
+      <a href="#" onClick="history.back()" class="a-button"
+        ><i class="fas fa-arrow-left"></i> Back</a
+      >
+      <a href="/" class="a-button"><i class="fas fa-home"></i> Home</a
+      ><br /><br /><br />The "Back" button takes you back where you was before
+      and the "Home" button takes you to my homepage.
     </div>
   </body>
 </html>
