--- a/index.html
+++ b/index.html
@@ -7,32 +7,14 @@
     <title>Aless Website</title>
     <link rel="stylesheet" href="./styles.css" />
     <script type="text/javascript" src="app.js"></script>
-    <!--     <script
-      src="https://kit.fontawesome.com/5e1adbb88d.js"
-      crossorigin="anonymous"
-    ></script> -->
     <link rel="icon" href="favicon.png" />
     <meta
       name="google-site-verification"
       content="Bf2Y0l0YWSFe-iqN4JecPsYjq7XJE_waZ6hBPq_z6Go"
     />
-    <meta name="description" content="Check out the Aless Website!" />
+    <meta name="description" content="Check out Aless Website!" />
     <meta name="robots" content="noarchive" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-Y1H2Y8BXC7"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-Y1H2Y8BXC7");
-    </script>
   </head>
   <body>
     <noscript
@@ -49,18 +31,22 @@
         $("#topnav").load("Assets/topnav.html");
       });
     </script>
-    <h1 style="text-align: center">Hi There, and welcome to my website !</h1>
+    <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
     <p style="text-align: center">
       I'm a guy, who's addicted to Technology and EDM.
     </p>
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
       <br />
+      <a href="https://twitter.com/AlessGoss" class="a-button" target="_blank"
+        ><i class="fab fa-twitter"></i> My Twitter profile</a
+      >
+      <br /><br /><br />
       <a
         href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
         class="a-button"
         target="_blank"
-        >My YouTube Channel</a
+        ><i class="fab fa-youtube"></i> My YouTube Channel</a
       >
       <br /><br /><br />
       <a
@@ -68,24 +54,24 @@
         href="https://discord.com/widget?id=814923106229420042&theme=dark"
         target="_blank"
       >
-        My Discord Server</a
+        <i class="fab fa-discord"></i> My Discord Server</a
       >
       <br /><br /><br />
       <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
-        >My Telegram blog</a
+        ><i class="fab fa-telegram"></i> My Telegram blog</a
       >
       <br /><br /><br />
       <div style="background: #222; border-radius: 25px">
-        <br />My GitHub...<br /><br /><a
+        <br /><i class="fab fa-github"></i> My GitHub...<br /><br /><a
           href="https://github.com/AlessGoss"
           target="_blank"
           class="a-button"
-          >Profile</a
+          ><i class="fas fa-user-circle"></i> Profile</a
         ><br /><br /><br /><a
           href="https://github.com./AlessGoss/alessgoss.github.io"
           class="a-button"
           target="_blank"
-          >Website repository</a
+          ><i class="fas fa-code"></i> Website repository</a
         ><br /><br />
       </div>
     </div>
