Update HTML Files

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     />
     <meta name="robots" content="noarchive" />
     <script type="text/javascript" src="app.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   </head>
   <body>
     <div id="topnav"></div>
