--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta name="description" content="Check out Aless Website!" />
     <meta name="robots" content="noarchive" />
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   </head>
   <body>
     <noscript
