Correct a typo on a link.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           class="a-button"
           ><i class="fas fa-user-circle"></i> Profile</a
         ><br /><br /><br /><a
-          href="https://github.com./AlessGoss/alessgoss.github.io"
+          href="https://github.com/AlessGoss/alessgoss.github.io"
           class="a-button"
           target="_blank"
           ><i class="fas fa-code"></i> Website repository</a
