--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -33,7 +33,9 @@
   <body>
     <div class="topnavgrp" style="width: 100%">
       <div class="topnav">
-        <a href="/index.html"><img src="/favicon.png" class="topnavicon" /></a>
+        <a href="/index.html"
+          ><img src="/Assets/logo.png" class="topnavicon"
+        /></a>
         <a href="/index.html" class="topnavtitle a-button">Aless Website</a>
       </div>
       <br />
