Add Reddit Profile.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1>Check out my social media!</h1>
       <br />
       <a href="https://twitter.com/AlessGoss" class="a-button" target="_blank"
-        ><i class="fab fa-twitter"></i> My Twitter profile</a
+        ><i class="fab fa-twitter"></i> My Twitter Profile</a
       >
       <br /><br /><br />
       <a
@@ -58,7 +58,11 @@
       >
       <br /><br /><br />
       <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
-        ><i class="fab fa-telegram"></i> My Telegram blog</a
+        ><i class="fab fa-telegram"></i> My Telegram Blog</a
+      >
+      <br /><br /><br />
+      <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
+        ><i class="fab fa-reddit"></i> My Reddit Profile</a
       >
       <br /><br /><br />
       <div style="background: #222; border-radius: 25px">
@@ -71,11 +75,11 @@
           href="https://github.com/AlessGoss/alessgoss.github.io"
           class="a-button"
           target="_blank"
-          ><i class="fas fa-code"></i> Website repository</a
+          ><i class="fas fa-code"></i> Website Repository</a
         ><br /><br />
       </div>
     </div>
     <br /><br />
-    <footer style="text-align: center">Copyright &copy; 2021 AlessGoss</footer>
+    <footer style="text-align: center">&copy; 2021 AlessGoss</footer>
   </body>
 </html>
