Change the description and its text size.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       });
     </script>
     <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
-    <p style="text-align: center">
-      I'm a guy, who's addicted to Technology and EDM.
-    </p>
+    <h4 style="text-align: center">
+      I'm a developer and a tester. I love technology.
+    </h4>
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
       <br />
