--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         ><i class="fab fa-telegram"></i> My Telegram Blog</a
       >
       <br /><br /><br />
-      <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
+      <a href="https://reddit.com/user/AlessDu59" class="a-button" target="_blank"
         ><i class="fab fa-reddit"></i> My Reddit Profile</a
       >
       <br /><br /><br />
