--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aless Website</title>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link rel="stylesheet" href="./styles.css" />
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
     <link rel="icon" href="favicon.png" />
     <meta
       name="google-site-verification"
