--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       name="description"
       content="This is where you are when you are lost on my website."
     />
-    <meta name="robots" content="noarchive" />
+    <meta name="robots" content="noindex" />
     <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
