HUGE IMPROVEMENT: Added light-dark mode system.

--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -16,9 +16,19 @@
     <div class="topnavgrp" style="width: 100%">
       <div class="topnav">
         <a href="/index.html"
-          ><img src="/Assets/logo.png" class="topnavicon"
+          ><img
+            src="/Assets/logo.png"
+            class="topnavicon a-button"
+            style="padding: 0 !important"
         /></a>
         <a href="/index.html" class="topnavtitle a-button">Aless Website</a>
+        <a
+          href="#"
+          class="a-button topnavtitle"
+          id="toggleThemeBtn"
+          onclick="lightMode(true)"
+          ><i class="fas fa-sun"></i> (Light mode)</a
+        >
       </div>
     </div>
   </body>
