--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         ><i class="fab fa-reddit"></i> My Reddit Profile</a
       >
       <br /><br /><br />
-      <div style="background: #222; border-radius: 25px">
+      <div class="container">
         <br /><i class="fab fa-github"></i> My GitHub...<br /><br /><a
           href="https://github.com/AlessGoss"
           target="_blank"
