--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
       </div>
     </div>
     <br /><br />
-    <footer style="text-align: center">&copy; 2022 AlessGoss</footer>
+    <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
   </body>
 </html>
