Convert ALL <a> buttons to actual buttons.

--- a/404.html
+++ b/404.html
@@ -28,10 +28,13 @@
     </p>
     <br /><br />
     <div style="text-align: center">
-      <a href="#" onClick="history.back()" class="a-button"
-        ><i class="fas fa-arrow-left"></i> Back</a
+      <a href="#" onClick="history.back()"
+        ><button class="button">
+          <i class="fas fa-arrow-left"></i> Back
+        </button></a
       >
-      <a href="/" class="a-button"><i class="fas fa-home"></i> Home</a
+      <a href="/"
+        ><button class="button"><i class="fas fa-home"></i> Home</button></a
       ><br /><br /><br />The "Back" button takes you back where you was before
       and the "Home" button takes you to my homepage.
     </div>
