--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -18,16 +18,20 @@
         <a href="/index.html"
           ><img
             src="/Assets/logo.png"
-            class="topnavicon a-button"
+            class="topnavicon button"
             style="padding: 0 !important"
         /></a>
-        <a href="/index.html" class="topnavtitle a-button">Aless Website</a>
-        <a
-          href="#"
-          class="a-button topnavtitle"
-          id="toggleThemeBtn"
-          onclick="lightMode(true)"
-          ><i class="fas fa-sun"></i> (Light mode)</a
+        <a href="/index.html"
+          ><button class="button topnavtitle">Aless Website</button></a
+        >
+        <a href="#"
+          ><button
+            class="button topnavtitle"
+            id="toggleThemeBtn"
+            onclick="lightMode(true)"
+          >
+            <i class="fas fa-sun"></i> (Light mode)
+          </button></a
         >
       </div>
     </div>
