--- a/index.html
+++ b/index.html
@@ -38,47 +38,54 @@
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
       <br />
-      <a href="https://twitter.com/AlessGoss" class="a-button" target="_blank"
-        ><i class="fab fa-twitter"></i> My Twitter Profile</a
+      <a href="https://twitter.com/AlessGoss" target="_blank"
+        ><button class="button">
+          <i class="fab fa-twitter"></i> My Twitter Profile
+        </button></a
       >
-      <br /><br /><br />
+      <br /><br />
       <a
         href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
-        class="a-button"
         target="_blank"
-        ><i class="fab fa-youtube"></i> My YouTube Channel</a
+        ><button class="button">
+          <i class="fab fa-youtube"></i> My YouTube Channel
+        </button></a
       >
-      <br /><br /><br />
+      <br /><br />
       <a
-        class="a-button"
         href="https://discord.com/widget?id=814923106229420042&theme=dark"
         target="_blank"
       >
-        <i class="fab fa-discord"></i> My Discord Server</a
+        <button class="button">
+          <i class="fab fa-discord"></i> My Discord Server
+        </button></a
       >
-      <br /><br /><br />
-      <a href="https://t.me/AlessBlog" class="a-button" target="_blank"
-        ><i class="fab fa-telegram"></i> My Telegram Blog</a
+      <br /><br />
+      <a href="https://t.me/AlessBlog" target="_blank"
+        ><button class="button">
+          <i class="fab fa-telegram"></i> My Telegram Blog
+        </button></a
       >
-      <br /><br /><br />
-      <a
-        href="https://reddit.com/user/AlessDu59"
-        class="a-button"
-        target="_blank"
-        ><i class="fab fa-reddit"></i> My Reddit Profile</a
+      <br /><br />
+      <a href="https://reddit.com/user/AlessDu59" target="_blank"
+        ><button class="button">
+          <i class="fab fa-reddit"></i> My Reddit Profile
+        </button></a
       >
-      <br /><br /><br />
+      <br /><br />
       <div class="container">
         <br /><i class="fab fa-github"></i> My GitHub...<br /><br /><a
           href="https://github.com/AlessGoss"
           target="_blank"
-          class="a-button"
-          ><i class="fas fa-user-circle"></i> Profile</a
-        ><br /><br /><br /><a
+          ><button class="button">
+            <i class="fas fa-user-circle"></i> Profile
+          </button></a
+        ><br /><br /><a
           href="https://github.com/AlessGoss/alessgoss.github.io"
-          class="a-button"
           target="_blank"
-          ><i class="fas fa-code"></i> Website Repository</a
+          ><button class="button">
+            <i class="fas fa-code"></i> Website Repository
+          </button></a
         ><br /><br />
       </div>
     </div>
