Improved button `active` effect.
Removed `border` from buttons when being clicked and added a cool animation instead. :)

--- a/404.html
+++ b/404.html
@@ -26,17 +26,17 @@
       Oh no, you are lost! I can take you back if you want. Click one of the
       buttons below.
     </p>
-    <br /><br />
+    <br />
     <div style="text-align: center">
-      <a href="#" onClick="history.back()"
+      <a href="#" onClick="history.back()" tabindex="-1"
         ><button class="button">
           <i class="fas fa-arrow-left"></i> Back
         </button></a
       >
-      <a href="/"
+      <a href="/" tabindex="-1"
         ><button class="button"><i class="fas fa-home"></i> Home</button></a
-      ><br /><br /><br />The "Back" button takes you back where you was before
-      and the "Home" button takes you to my homepage.
+      ><br /><br />The "Back" button takes you back where you was before and the
+      "Home" button takes you to my homepage.
     </div>
   </body>
 </html>
