--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -21,10 +21,10 @@
             class="topnavicon button"
             style="padding: 0 !important"
         /></a>
-        <a href="/index.html"
+        <a href="/index.html" tabindex="-1"
           ><button class="button topnavtitle">Aless Website</button></a
         >
-        <a href="#"
+        <a href="#" tabindex="-1"
           ><button
             class="button topnavtitle"
             id="toggleThemeBtn"
