--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
       <br />
-      <a href="https://twitter.com/AlessGoss" target="_blank"
+      <a href="https://twitter.com/AlessGoss" target="_blank" tabindex="-1"
         ><button class="button">
           <i class="fab fa-twitter"></i> My Twitter Profile
         </button></a
@@ -47,6 +47,7 @@
       <a
         href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
         target="_blank"
+        tabindex="-1"
         ><button class="button">
           <i class="fab fa-youtube"></i> My YouTube Channel
         </button></a
@@ -55,19 +56,20 @@
       <a
         href="https://discord.com/widget?id=814923106229420042&theme=dark"
         target="_blank"
+        tabindex="-1"
       >
         <button class="button">
           <i class="fab fa-discord"></i> My Discord Server
         </button></a
       >
       <br /><br />
-      <a href="https://t.me/AlessBlog" target="_blank"
+      <a href="https://t.me/AlessBlog" target="_blank" tabindex="-1"
         ><button class="button">
           <i class="fab fa-telegram"></i> My Telegram Blog
         </button></a
       >
       <br /><br />
-      <a href="https://reddit.com/user/AlessDu59" target="_blank"
+      <a href="https://reddit.com/user/AlessDu59" target="_blank" tabindex="-1"
         ><button class="button">
           <i class="fab fa-reddit"></i> My Reddit Profile
         </button></a
@@ -77,12 +79,14 @@
         <br /><i class="fab fa-github"></i> My GitHub...<br /><br /><a
           href="https://github.com/AlessGoss"
           target="_blank"
+          tabindex="-1"
           ><button class="button">
             <i class="fas fa-user-circle"></i> Profile
           </button></a
         ><br /><br /><a
           href="https://github.com/AlessGoss/alessgoss.github.io"
           target="_blank"
+          tabindex="-1"
           ><button class="button">
             <i class="fas fa-code"></i> Website Repository
           </button></a
