--- a/index.html
+++ b/index.html
@@ -38,62 +38,62 @@
     <div style="text-align: center">
       <h1>Check out my social media!</h1>
       <br />
-      <a href="https://twitter.com/AlessGoss" target="_blank" tabindex="-1"
-        ><button class="button">
+      <form action="https://twitter.com/AlessGoss" target="_blank">
+        <button class="button" type="submit">
           <i class="fab fa-twitter"></i> My Twitter Profile
-        </button></a
-      >
+        </button>
+      </form>
       <br /><br />
-      <a
-        href="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
+      <form
+        action="https://www.youtube.com/channel/UCkmWOMZ3--qM5QVO6rx9qFQ"
         target="_blank"
-        tabindex="-1"
-        ><button class="button">
+      >
+        <button class="button" type="submit">
           <i class="fab fa-youtube"></i> My YouTube Channel
-        </button></a
-      >
+        </button>
+      </form>
       <br /><br />
-      <a
-        href="https://discord.com/widget?id=814923106229420042&theme=dark"
+      <form
+        action="https://discord.com/widget?id=814923106229420042&theme=dark"
         target="_blank"
-        tabindex="-1"
       >
-        <button class="button">
+        <button class="button" type="submit">
           <i class="fab fa-discord"></i> My Discord Server
-        </button></a
-      >
+        </button>
+      </form>
       <br /><br />
-      <a href="https://t.me/AlessBlog" target="_blank" tabindex="-1"
-        ><button class="button">
+      <form action="https://t.me/AlessBlog" target="_blank">
+        <button class="button" type="submit">
           <i class="fab fa-telegram"></i> My Telegram Blog
-        </button></a
-      >
+        </button>
+      </form>
       <br /><br />
-      <a href="https://reddit.com/user/AlessDu59" target="_blank" tabindex="-1"
-        ><button class="button">
+      <form action="https://reddit.com/user/AlessDu59" target="_blank">
+        <button class="button" type="submit">
           <i class="fab fa-reddit"></i> My Reddit Profile
-        </button></a
-      >
+        </button>
+      </form>
       <br /><br />
       <div class="container">
-        <br /><i class="fab fa-github"></i> My GitHub...<br /><br /><a
-          href="https://github.com/AlessGoss"
-          target="_blank"
-          tabindex="-1"
-          ><button class="button">
+        <br /><i class="fab fa-github"></i> My GitHub...<br /><br />
+        <form action="https://github.com/AlessGoss" target="_blank">
+          <button class="button" type="submit">
             <i class="fas fa-user-circle"></i> Profile
-          </button></a
-        ><br /><br /><a
-          href="https://github.com/AlessGoss/alessgoss.github.io"
+          </button>
+        </form>
+        <br /><br />
+        <form
+          action="https://github.com/AlessGoss/alessgoss.github.io"
           target="_blank"
-          tabindex="-1"
-          ><button class="button">
+        >
+          <button class="button" type="submit">
             <i class="fas fa-code"></i> Website Repository
-          </button></a
-        ><br /><br />
+          </button>
+        </form>
+        <br /><br />
       </div>
     </div>
-    <br /><br />
+    <br />
     <footer style="text-align: center">&copy; 2021-2022 AlessGoss</footer>
   </body>
 </html>
