Disable light-dark mode system for IE* 9 and lower
*IE: Internet Explorer

Reason: My lightMode() function uses classList, which is not supported by IE 9 and lower. It might have other unsupported objects/properties, but this is a reason I could find.

--- a/Assets/topnav.html
+++ b/Assets/topnav.html
@@ -26,6 +26,7 @@
             Aless Website
           </button>
         </form>
+        <!--[if gte IE 10]><!-->
         <button
           class="button topnavtitle"
           id="toggleThemeBtn"
@@ -33,6 +34,7 @@
         >
           <i class="fas fa-sun"></i> (Light mode)
         </button>
+        <!--<![endif]-->
       </div>
     </div>
   </body>
