BUG FIXED: Discord Server button not working.

--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
         </button>
       </form>
       <br /><br />
-      <form
-        action="https://discord.com/widget?id=814923106229420042&theme=dark"
-        target="_blank"
-      >
+      <form action="https://discord.com/widget" target="_blank">
         <button class="button" type="submit">
           <i class="fab fa-discord"></i> My Discord Server
         </button>
+        <input type="text" name="id" value="814923106229420042" hidden />
+        <input type="text" name="theme" value="dark" hidden />
       </form>
       <br /><br />
       <form action="https://t.me/AlessBlog" target="_blank">
