BUG FIX for IE* 7 and earlier (read description).
Text boxes next to the Discord Server button were still visible in IE 7 (even with the `hidden` attribute), so I changed `... type="text" ...` to `... type="hidden" ...` and removed the `hidden` attribute. Now they're completely hidden.

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <button class="button" type="submit">
           <i class="fab fa-discord"></i> My Discord Server
         </button>
-        <input type="text" name="id" value="814923106229420042" hidden />
-        <input type="text" name="theme" value="dark" hidden />
+        <input type="text" name="id" value="814923106229420042" />
+        <input type="hidden" name="theme" value="dark" />
       </form>
       <br /><br />
       <form action="https://t.me/AlessBlog" target="_blank">
