Forgot something. (Again)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button class="button" type="submit">
           <i class="fab fa-discord"></i> My Discord Server
         </button>
-        <input type="text" name="id" value="814923106229420042" />
+        <input type="hidden" name="id" value="814923106229420042" />
         <input type="hidden" name="theme" value="dark" />
       </form>
       <br /><br />
