Update HTML files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="topnav"></div>
     <script>
       $(function () {
-        $("#topnav").load("Assets/topnav.html");
+        $("#topnav").load("assets/topnav.html");
       });
     </script>
     <h1 style="text-align: center">Hi There, and welcome to my website!</h1>
