--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
     <div id="topnav"></div>
     <script>
       $(function () {
-        $("#topnav").load("/Assets/topnav.html");
+        $("#topnav").load("/assets/topnav.html");
       });
     </script>
     <h1 style="text-align: center; font-size: 100px">404</h1>
