--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -17,7 +17,7 @@
       <div class="topnav">
         <a href="/index.html"
           ><img
-            src="/Assets/logo.png"
+            src="/assets/logo.png"
             class="topnavicon button"
             style="padding: 0 !important"
         /></a>
