Hide light/dark mode button if JavaScript disabled.

--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -11,6 +11,13 @@
       src="https://kit.fontawesome.com/5e1adbb88d.js"
       crossorigin="anonymous"
     ></script>
+    <noscript
+      ><style>
+        #toggleThemeBtn {
+          display: none;
+        }
+      </style></noscript
+    >
   </head>
   <body>
     <div class="topnavgrp" style="width: 100%">
