--- a/assets/topnav.html
+++ b/assets/topnav.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Top navigation bar</title>
     <meta name="robots" content="noindex" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <script
       src="https://kit.fontawesome.com/5e1adbb88d.js"
       crossorigin="anonymous"
@@ -18,17 +18,18 @@
         }
       </style></noscript
     >
+    <script type="text/javascript" src="../app.js"></script>
   </head>
   <body>
     <div class="topnavgrp" style="width: 100%">
       <div class="topnav">
         <a href="/index.html"
           ><img
-            src="/assets/logo.png"
+            src="../assets/logo.png"
             class="topnavicon button"
             style="padding: 0 !important"
         /></a>
-        <form action="/index.html">
+        <form action="../index.html">
           <button class="button topnavtitle" type="submit">
             Aless Website
           </button>
